# Projeto_aprendizado_continuo

./: docker-copmpose.yml  pyproject.toml
src/: app.py
